--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
       initial-scale=1.0">
-    <title>Document</title>
+    <title>projeto redes social </title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+        </section>
+        <section id="redes-sociais">
+            <a href="" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a>
+        </section>
+    </main>
 </body>
 </html>
